2008-07-12  MIYAMUKO Katsuyuki

	* xml-http-request 1.2.1 released!

	* ライセンスファイルを同梱

2008-04-19  MIYAMUKO Katsuyuki

	* - (ole-collection->list): rename from ole-collection-to-list
	  - (ole-collection->list): nreverse にした。
	  - シンボルをキーワードにした

2008-03-30  MIYAMUKO Katsuyuki

	* xml-http-request 1.2.0 released!

	* Bumped version number to 1.2.0

	* credential => basic-auth

	* (xhr-credential): 引数が nil でも常に credential を作るようにした。

	* credential.l を require

	* Basic 認証用に credential 引数を追加。

	* set-buffer しないようにした。

2008-03-09  MIYAMUKO Katsuyuki

	* (xhr-trace): should setup temp buffer

2008-03-01  MIYAMUKO Katsuyuki

	* xml-http-request 1.1.1 released!

	* デバッグ用の関数を追加。xml-http-request.l で require はしない。

	* (url-encode-alist, url-encode-key-value, url-encode-value):
	  literal-chars と encoding を optional にした。

	* (add-query-string): add-query-params から分離。

	* (url-join-params, url-join-key-value): 関数に外だし

	* - (add-query-params): add-query-string から rename
	  - (url-encode-xxx): separator を & きめうち

	* - (add-query-string): uri に encode した query string を追加する。
	  - (xhr-do-request): query 引数を取るようにした。
	  - その他リクエストメソッドでも同上

	* - (url-encode): rename from www-url-encode.
	    add literal-chars keyword argument to specify si:www-url-encode 3rd argument
	  (url-encode-alist): rename from encode.
	  (url-encode-key-value): rename from encode-key-value.
	  (url-encode-value): rename from encode-value.

	* - Msxml2.XMLHTTP.4.0 以上だと post がまともに動かないので
	    progid list からは削除
	  - progid は keyword 引数で指定してもらうことにするので、
	    progid-list を定数にした。

2008-02-23  MIYAMUKO Katsuyuki

	* xml-http-request 1.1.0 released!

	* :nomsg 引数を追加。

	* - デバッグ用に ole メソッドを呼ぶ前に hook を実行

	* - (*xhr-client-progid-list*): クライアント xmlhttp の progid
	  - (*xhr-server-progid-list*): サーバ xmlhttp の progid
	  - (create-xmlhttp): request.l から ole.l に移動, progid, server-p も保持するようにした。
	  - (create-xmlhttp): oledata, progid, server-p のアクセッサを定義
	  - (xhr-future): future.l から type.l に移動
